feat img & sub-btn 수정

--- a/src/drive.html
+++ b/src/drive.html
@@ -49,28 +49,60 @@
       <h1>드라이브 코스</h1>
       <div class="drive--cos">
         <img src="../video/banpojpg.jpg" alt="이미지1" class="image image1" />
-        <p class="p p1" style="opacity: 1">반포 대교</p>
-        <span class="s s1" style="opacity: 1">안녕하세요</span>
+        <div class="drive text1" style="opacity: 1">
+          <p class="p p1" style="opacity: 1">반포 대교</p>
+          <span class="s s1" style="opacity: 1"
+            >위치: 서울 서초구 동작대로 350</span
+          >
+          <span class="s s1" style="opacity: 1"
+            >교통정보: <br />- 4호선 동작역 1,2번 출구 <br />- 9호선 신반포역
+            1번 출구<br />- 7호선 고속터미널역 8-1,8-2번 출구</span
+          >
+          <span class="s s1" style="opacity: 1">볼거리: 무지개 분수 </span>
+        </div>
 
         <img src="../video/namsan.jpg" alt="이미지2" class="image image2" />
-        <p class="p p2" style="opacity: 0">남산 타워</p>
-        <span class="s s2" style="opacity: 0">반갑습니다</span>
+        <div class="drive text2" style="opacity: 0">
+          <p class="p p2" style="opacity: 0">남산 타워</p>
+          <span class="s s2" style="opacity: 0"
+            >위치: 서울특별시 용산구 남산공원길 105</span
+          >
+          <span
+            >교통정보: <br />- 충무로역 2번 출구(대한극장)<br />- 동대입구역 6번
+            출구</span
+          >
+          <span class="s s1" style="opacity: 1"
+            >볼거리: 남산타워 전망대 <br />
+            프로포즈 계단 <br />
+            러브터널</span
+          >
+        </div>
 
         <img src="../video/buk.jpg" alt="이미지3" class="image image3" />
-        <p class="p p3" style="opacity: 0">북악 스퀘어</p>
-        <span class="s s3" style="opacity: 0">반갑습니다</span>
+        <div class="drive text3" style="opacity: 0">
+          <p class="p p3" style="opacity: 0">북악 스퀘어</p>
+          <span class="s s3" style="opacity: 0"
+            >위치: 서울특별시 종로구 평창동 북악산로 267</span
+          >
+        </div>
 
-        <img src="../video/buk.jpg" alt="이미지4" class="image image4" />
-        <p class="p p4" style="opacity: 0">북악 스퀘어</p>
-        <span class="s s4" style="opacity: 0">반갑습니다</span>
+        <img src="../video/drive4.png" alt="이미지4" class="image image4" />
+        <div class="drive text4" style="opacity: 0">
+          <p class="p p4" style="opacity: 0">응봉산</p>
+          <span class="s s4" style="opacity: 0">반갑습니다</span>
+        </div>
 
-        <img src="../video/buk.jpg" alt="이미지5" class="image image5" />
-        <p class="p p5" style="opacity: 0">북악 스퀘어</p>
-        <span class="s s5" style="opacity: 0">반갑습니다</span>
+        <img src="../video/drive5.png" alt="이미지5" class="image image5" />
+        <div class="drive text5" style="opacity: 0">
+          <p class="p p5" style="opacity: 0">여의도</p>
+          <span class="s s5" style="opacity: 0">반갑습니다</span>
+        </div>
 
-        <img src="../video/buk.jpg" alt="이미지6" class="image image6" />
-        <p class="p p6" style="opacity: 0">북악 스퀘어</p>
-        <span class="s s6" style="opacity: 0">반갑습니다</span>
+        <img src="../video/drive6.png" alt="이미지6" class="image image6" />
+        <div class="drive text6" style="opacity: 0">
+          <p class="p p6" style="opacity: 0">동호대교</p>
+          <span class="s s6" style="opacity: 0">반갑습니다</span>
+        </div>
       </div>
 
       <!-- Sub-btn -->
@@ -93,34 +125,34 @@
         <button class="btn btn4" onclick="change()">
           <span>드라이브 코스</span>
           <br />
-          <span>40km</span>
+          <span>응봉산</span>
         </button>
         <button class="btn btn5" onclick="change()">
           <span>드라이브 코스</span>
           <br />
-          <span>40km</span>
+          <span>여의도</span>
         </button>
         <button class="btn btn6" onclick="change()">
           <span>드라이브 코스</span>
           <br />
-          <span>40km</span>
+          <span>동호대교</span>
         </button>
       </div>
     </section>
 
     <!-- Detailed Page-->
-    <!-- <section>
+    <section>
       <div class="detail">
         <img src="../video/drive1.png" alt="" class="detail_item" />
       </div>
       <div class="detail_contents">
         <img src="" alt="" class="detail_tex" />
       </div>
-    </section> -->
+    </section>
 
     <!-- BUTTON -->
-    <!-- <button id="commonUpButton">
+    <button id="commonUpButton">
       <i class="fa-solid fa-arrow-up"></i>
-    </button> -->
+    </button>
   </body>
 </html>
