--- a/src/event.html
+++ b/src/event.html
@@ -61,10 +61,13 @@
             <div class="element" id="sec-1-el-6"><img src="../video/event/서대문_06.jpg" alt="" /></div>
             <div class="element" id="sec-1-el-7"><img src="../video/event/서대문_07.jpg" alt="" /></div>
           </div>
+          <div class="detailPopup">
+            <!-- <img src="" alt="" />
+              <i class="fa-regular fa-circle-xmark"></i> -->
+          </div>
         </div>
-        <div class="detailPopup"><img src="" alt="" /></div>
       </div>
-      <div class="bottom-text">가을 밤 아래, 별을 따라 걷는 길. 서대문구의 문화재와 동주의 이야기를 듣는 서대문구 문화재야행</div>
+      <!-- <div class="bottom-text">가을 밤 아래, 별을 따라 걷는 길. 서대문구의 문화재와 동주의 이야기를 듣는 서대문구 문화재야행</div> -->
     </section>
 
     <section class="section-2">
