feat.view페이지 슬라이더섹션2 완성

--- a/src/view.html
+++ b/src/view.html
@@ -35,27 +35,36 @@
         <article>
           <p>
             Enjoy The Night Scape <br />
-            Of Seoul!
+            Of Seoul
           </p>
         </article>
       </figure>
-      <div class="slider">
+      <div class="slider" id="slider3">
         <!-- 3 -->
-        3
+        <div class="loader"></div>
       </div>
       <div class="slider" id="slider2">
         <!-- 2 -->
         <div class="correct">
           <figure class="correct-content">
             <img src="/video/spot-image/반포대교 분수.jpg" alt="반포대교" />
+            <article class="emoge2">
+              <i class="fa-solid fa-heart" style="color: #dd2a7b"></i>
+              <i class="fa-regular fa-comment"></i>
+              <i class="fa-regular fa-paper-plane"></i>
+            </article>
+            <div class="homebtn"></div>
           </figure>
           <article class="descript">BANPO BRIDGE</article>
         </div>
         <div class="reverse">
           <figure class="reverse-content">
-            <img src="/video/spot-image/낙산공원.jpg" alt="낙산공원" />
+            <iframe
+              src="https://www.instagram.com/p/q1HQO1PqZZ/"
+              frameborder="0"
+            ></iframe>
+            <!-- http://www.somesevit.co.kr/kr/company/gallery/view.do?seq=74&cpage=9 -->
           </figure>
-          <article class="arti"></article>
         </div>
       </div>
       <div class="slider" id="slider1">
