--- a/src/palace.html
+++ b/src/palace.html
@@ -34,6 +34,18 @@
     </article>
   </figure>
 
+  <div class="mq1">
+    <marquee behavior="scroll" direction="left" scrolldelay="3">Seoul Night Seoul Night Seoul Night Seoul Night Seoul
+      Night
+      Seoul Night Seoul Night Seoul Night Seoul Night Seoul Night Seoul Night Seoul NightSeoul Night Seoul Night Seoul
+      Night Seoul Night Seoul Night </marquee>
+  </div>
+  <div class="mq2">
+    <marquee behavior="scroll" direction="right" scrolldelay="3">Seoul Night Seoul Night Seoul Night Seoul Night Seoul
+      Night
+      Seoul Night Seoul Night Seoul Night Seoul Night Seoul Night Seoul Night Seoul NightSeoul Night Seoul Night Seoul
+      Night Seoul Night Seoul Night </marquee>
+  </div>
   <!-- 경복궁 -->
   <section class="palace-kb">
     <div class="container">
@@ -66,19 +78,19 @@
     <div class="slider-container">
       <div class="left-slide">
         <div class="item1">
-          <h1>Nature flower</h1>
+          <h1>중 관 전</h1>
           <p>all in pink</p>
         </div>
         <div class="item2">
-          <h1>Bluuue Sky</h1>
+          <h1>경 운 함</h1>
           <p>with it's mountains</p>
         </div>
         <div class="item3">
-          <h1>Lonely castle</h1>
+          <h1>석 조 전</h1>
           <p>in the wilderness</p>
         </div>
         <div class="item4">
-          <h1>Flying eagle</h1>
+          <h1>석 어 전</h1>
           <p>in the sunset</p>
         </div>
       </div>
