feat. view페이지 완성

--- a/src/drive.html
+++ b/src/drive.html
@@ -37,7 +37,7 @@
     <!-- Figure -->
     <figure>
       <video
-        src="../video/제목 없는 동영상 - Clipchamp로 제작.mp4"
+        src="/video/drive-image/제목 없는 동영상 - Clipchamp로 제작.mp4"
         autoplay
         muted
         loop
@@ -48,7 +48,11 @@
     <section id="two">
       <h1>드라이브 코스</h1>
       <div class="drive--cos">
-        <img src="../video/banpojpg.jpg" alt="이미지1" class="image image1" />
+        <img
+          src="/video/drive-image/banpojpg.jpg"
+          alt="이미지1"
+          class="image image1"
+        />
         <div class="drive text1" style="opacity: 1">
           <p class="p p1" style="opacity: 1">반포 대교</p>
           <span class="s s1" style="opacity: 1"
@@ -61,7 +65,11 @@
           <span class="s s1" style="opacity: 1">볼거리: 무지개 분수 </span>
         </div>
 
-        <img src="../video/namsan.jpg" alt="이미지2" class="image image2" />
+        <img
+          src="/video/drive-image/namsan.jpg"
+          alt="이미지2"
+          class="image image2"
+        />
         <div class="drive text2" style="opacity: 0">
           <p class="p p2" style="opacity: 0">남산 타워</p>
           <span class="s s2" style="opacity: 0"
@@ -78,7 +86,11 @@
           >
         </div>
 
-        <img src="../video/buk.jpg" alt="이미지3" class="image image3" />
+        <img
+          src="/video/drive-image/buk.jpg"
+          alt="이미지3"
+          class="image image3"
+        />
         <div class="drive text3" style="opacity: 0">
           <p class="p p3" style="opacity: 0">북악 스퀘어</p>
           <span class="s s3" style="opacity: 0"
@@ -86,19 +98,31 @@
           >
         </div>
 
-        <img src="../video/drive4.png" alt="이미지4" class="image image4" />
+        <img
+          src="/video/drive-image/drive4.png"
+          alt="이미지4"
+          class="image image4"
+        />
         <div class="drive text4" style="opacity: 0">
           <p class="p p4" style="opacity: 0">응봉산</p>
           <span class="s s4" style="opacity: 0">반갑습니다</span>
         </div>
 
-        <img src="../video/drive5.png" alt="이미지5" class="image image5" />
+        <img
+          src="../video/drive-image/drive5.png"
+          alt="이미지5"
+          class="image image5"
+        />
         <div class="drive text5" style="opacity: 0">
           <p class="p p5" style="opacity: 0">여의도</p>
           <span class="s s5" style="opacity: 0">반갑습니다</span>
         </div>
 
-        <img src="../video/drive6.png" alt="이미지6" class="image image6" />
+        <img
+          src="../video/drive-image/drive6.png"
+          alt="이미지6"
+          class="image image6"
+        />
         <div class="drive text6" style="opacity: 0">
           <p class="p p6" style="opacity: 0">동호대교</p>
           <span class="s s6" style="opacity: 0">반갑습니다</span>
@@ -143,7 +167,7 @@
     <!-- Detailed Page-->
     <section>
       <div class="detail">
-        <img src="../video/drive1.png" alt="" class="detail_item" />
+        <img src="../video/drive-image/drive1.png" alt="" class="detail_item" />
       </div>
       <div class="detail_contents">
         <img src="" alt="" class="detail_tex" />
