feat. view페이지 완성

--- a/main.html
+++ b/main.html
@@ -12,10 +12,7 @@
     <nav>
       <ul class="nav">
         <li>
-          <a href="/src/event.html">
-            EVENT:<br />
-            NIGHT</a
-          >
+          <a href="/src/event.html">EVENT:<br />NIGHT</a>
         </li>
         <li>
           <a href="/src/palace.html"> PALACE:<br />NIGHT</a>
@@ -29,12 +26,6 @@
       </ul>
     </nav>
     <figure>
-      <!-- <video
-          src="/video/y2mate.com - 8K 서울야경 타임랩스 Night in Seoul  2021 8K Seoul Timelapse_1080p.mp4"
-          muted
-          loop
-          autoplay
-        ></video> -->
       <article class="morpContainer">
         <div class="word">
           NIGHT<br />
