refactor. 슬라이더섹션3 리팩토링 및 기능 추가

--- a/src/palace.html
+++ b/src/palace.html
@@ -1,196 +1,255 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Document</title>
+    <!-- FONT AWESOME -->
+    <script
+      defer
+      src="https://kit.fontawesome.com/7090071867.js"
+      crossorigin="anonymous"
+    ></script>
+    <!-- SCSS -->
+    <link rel="stylesheet" href="/scss/palace css/palace.css" />
+    <!-- JS -->
+    <script defer src="/js/palace.js"></script>
+    <script defer src="/js/commonButton.js"></script>
+  </head>
 
-<head>
-  <meta charset="UTF-8" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Document</title>
-  <!-- FONT AWESOME -->
-  <script defer src="https://kit.fontawesome.com/7090071867.js" crossorigin="anonymous"></script>
-  <!-- SCSS -->
-  <link rel="stylesheet" href="/scss/palace css/palace.css" />
-  <!-- JS -->
-  <script defer src="/js/palace.js"></script>
-  <script defer src="/js/commonButton.js"></script>
-</head>
+  <body>
+    <header>
+      <a href="/main.html"> NIGHT IN SEOUL</a>
+      <ul>
+        <li>Drive</li>
+        <li>Events</li>
+        <li>Palace</li>
+        <li>View</li>
+      </ul>
+    </header>
+    <figure>
+      <video
+        src="../video/palace/8K_Timelapse_광화문_야간개장_타임랩스_A7R3_타임랩스_⧸_Timelapse_영상__무료_타임랩스⧸_Royalty_free_video__AdobeExpress.mp4"
+        autoplay
+        muted
+        loop
+      ></video>
+      <article class="text">
+        <p>
+          Palace<br />
+          Night
+        </p>
+      </article>
+    </figure>
 
-<body>
-  <header>
-    <a href="/main.html"> NIGHT IN SEOUL</a>
-    <ul>
-      <li>Drive</li>
-      <li>Events</li>
-      <li>Palace</li>
-      <li>View</li>
-    </ul>
-  </header>
-  <figure>
-    <video
-      src="../video/palace/8K_Timelapse_광화문_야간개장_타임랩스_A7R3_타임랩스_⧸_Timelapse_영상__무료_타임랩스⧸_Royalty_free_video__AdobeExpress.mp4"
-      autoplay muted loop></video>
-    <article class="text">
-      <p>Palace<br /> Night</p>
-    </article>
-  </figure>
-
-  <div class="mq1">
-    <marquee behavior="scroll" direction="left" scrolldelay="3">Seoul Night Seoul Night Seoul Night Seoul Night Seoul
-      Night
-      Seoul Night Seoul Night Seoul Night Seoul Night Seoul Night Seoul Night Seoul NightSeoul Night Seoul Night Seoul
-      Night Seoul Night Seoul Night </marquee>
-  </div>
-  <div class="mq2">
-    <marquee behavior="scroll" direction="right" scrolldelay="3">Seoul Night Seoul Night Seoul Night Seoul Night Seoul
-      Night
-      Seoul Night Seoul Night Seoul Night Seoul Night Seoul Night Seoul Night Seoul NightSeoul Night Seoul Night Seoul
-      Night Seoul Night Seoul Night </marquee>
-  </div>
-  <!-- 경복궁 -->
-  <section class="palace-kb">
-    <div class="container">
-      <div class="card">
-        <img src="../video/palace/kb-gwanghwa.jpg" />
-        <div class="card__head">광화문</div>
-      </div>
-      <div class="card">
-        <img src="../video/palace/kb-guenjung.jpg" />
-        <div class="card__head">근정전</div>
-      </div>
-      <div class="card">
-        <img src="../video/palace/kb-hyangwon.jpg" />
-        <div class="card__head">향원루</div>
-      </div>
-      <div class="card">
-        <img src="../video/palace/kb-chilgoong.jpeg" />
-        <div class="card__head">칠궁</div>
-      </div>
-      <div class="card">
-        <img src="../video/palace/kb-kyunghoi.jpg" />
-        <div class="card__head">경회루</div>
-      </div>
+    <div class="mq1">
+      <marquee behavior="scroll" direction="left" scrolldelay="3"
+        >Seoul Night Seoul Night Seoul Night Seoul Night Seoul Night Seoul Night
+        Seoul Night Seoul Night Seoul Night Seoul Night Seoul Night Seoul
+        NightSeoul Night Seoul Night Seoul Night Seoul Night Seoul Night
+      </marquee>
     </div>
-  </section>
-
-
-  <!-- 덕수궁 -->
-  <section class="palace-ds">
-    <div class="slider-container">
-      <div class="left-slide">
-        <div class="item1">
-          <h1>중 관 전</h1>
-          <p>all in pink</p>
-        </div>
-        <div class="item2">
-          <h1>경 운 함</h1>
-          <p>with it's mountains</p>
-        </div>
-        <div class="item3">
-          <h1>석 조 전</h1>
-          <p>in the wilderness</p>
-        </div>
-        <div class="item4">
-          <h1>석 어 전</h1>
-          <p>in the sunset</p>
-        </div>
-      </div>
-      <div class="right-slide">
-        <div class="item1"></div>
-        <div class="item2"></div>
-        <div class="item3"></div>
-        <div class="item4"></div>
-      </div>
-
-      <div class="action-buttons">
-        <button class="down-button">
-          <i class="fas fa-arrow-down"></i>
-        </button>
-        <button class="up-button">
-          <i class="fas fa-arrow-up"></i>
-        </button>
-      </div>
+    <div class="mq2">
+      <marquee behavior="scroll" direction="right" scrolldelay="3"
+        >Seoul Night Seoul Night Seoul Night Seoul Night Seoul Night Seoul Night
+        Seoul Night Seoul Night Seoul Night Seoul Night Seoul Night Seoul
+        NightSeoul Night Seoul Night Seoul Night Seoul Night Seoul Night
+      </marquee>
     </div>
-  </section>
-
-
-  <!-- 창경궁 -->
-  <section class="palace-cdk">
-    <div class="container">
-
-      <div class="mySlides">
-        <!-- <div class="numbertext">1 / 6</div> -->
-        <img src="../video/palace/ck-buyong.jpg" style="width:100%">
-      </div>
-
-      <div class="mySlides">
-        <!-- <div class="numbertext">2 / 6</div> -->
-        <img src="../video/palace/ck-chundang.jpg" style="width:100%">
-      </div>
-
-      <div class="mySlides">
-        <!-- <div class="numbertext">3 / 6</div> -->
-        <img src="../video/palace/ck-daejo.jpg" style="width:100%">
-      </div>
-
-      <div class="mySlides">
-        <!-- <div class="numbertext">4 / 6</div> -->
-        <img src="../video/palace/ck-huijeong.jpg" style="width:100%">
-      </div>
-
-      <div class="mySlides">
-        <!-- <div class="numbertext">5 / 6</div> -->
-        <img src="../video/palace/ck-injeong.jpeg" style="width:100%">
-      </div>
-
-      <div class="mySlides">
-        <!-- <div class="numbertext">6 / 6</div> -->
-        <img src="../video/palace/ck-okcheonmyungjeon.jpg" style="width:100%">
-      </div>
-
-      <!-- Next and previous buttons -->
-      <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
-      <a class="next" onclick="plusSlides(1)">&#10095;</a>
-
-      <!-- Image text -->
-      <div class="caption-container">
-        <p id="caption"></p>
-      </div>
-
-      <!-- Thumbnail images -->
-      <div class="row">
-        <div class="column">
-          <img class="demo-cursor" src="../video/palace/ck-buyong.jpg" style="width:100%" onclick="currentSlide(1)"
-            alt="부용전">
+    <!-- 경복궁 -->
+    <section class="palace-kb">
+      <div class="container">
+        <div class="card">
+          <!-- src="../video/palace/kb-gwanghwa.jpg" -->
+          <img src="../video/palace/kb-gwanghwa.jpg" />
+          <div class="card__head">광화문</div>
         </div>
-        <div class="column">
-          <img class="demo-cursor" src="../video/palace/ck-chundang.jpg" style="width:100%" onclick="currentSlide(2)"
-            alt="춘당지">
+        <div class="card">
+          <!-- src="../video/palace/kb-guenjung.jpg" -->
+          <img src="../video/palace/kb-guenjung.jpg" />
+          <div class="card__head">근정전</div>
         </div>
-        <div class="column">
-          <img class="demo-cursor" src="../video/palace/ck-daejo.jpg" style="width:100%" onclick="currentSlide(3)"
-            alt="대조전">
+        <div class="card">
+          <!-- src="../video/palace/kb-hyangwon.jpg" -->
+          <img src="../video/palace/kb-hyangwon.jpg" />
+          <div class="card__head">향원루</div>
         </div>
-        <div class="column">
-          <img class="demo-cursor" src="../video/palace/ck-huijeong.jpg" style="width:100%" onclick="currentSlide(4)"
-            alt="희정루">
+        <div class="card">
+          <!-- src="../video/palace/kb-chilgoong.jpeg" -->
+          <img src="../video/palace/kb-chilgoong.jpeg" />
+          <div class="card__head">칠궁</div>
         </div>
-        <div class="column">
-          <img class="demo-cursor" src="../video/palace/ck-injeong.jpeg" style="width:100%" onclick="currentSlide(5)"
-            alt="인정전">
-        </div>
-        <div class="column">
-          <img class="demo-cursor" src="../video/palace/ck-okcheonmyungjeon.jpg" style="width:100%"
-            onclick="currentSlide(6)" alt="옥천전 & 명정전">
+        <div class="card">
+          <!-- src="../video/palace/kb-kyunghoi.jpg"  -->
+          <img src="../video/palace/kb-kyunghoi.jpg" />
+          <div class="card__head">경회루</div>
         </div>
       </div>
-    </div>
-  </section>
+    </section>
 
+    <!-- 덕수궁 -->
+    <section class="palace-ds">
+      <div class="slider-container">
+        <div class="left-slide">
+          <div class="item1">
+            <h1>중 관 전</h1>
+            <p>all in pink</p>
+          </div>
+          <div class="item2">
+            <h1>경 운 함</h1>
+            <p>with it's mountains</p>
+          </div>
+          <div class="item3">
+            <h1>석 조 전</h1>
+            <p>in the wilderness</p>
+          </div>
+          <div class="item4">
+            <h1>석 어 전</h1>
+            <p>in the sunset</p>
+          </div>
+        </div>
+        <div class="right-slide">
+          <div
+            class="item1"
+            style="background-image: url(/video/palace-image/ds-junggwan.jpg)"
+          ></div>
+          <div class="item2"></div>
+          <div class="item3"></div>
+          <div class="item4"></div>
+        </div>
 
-  <!-- BUTTON -->
-  <button id="commonUpButton">
-    <i class="fa-solid fa-arrow-up"></i>
-  </button>
-</body>
+        <div class="action-buttons">
+          <button class="down-button">
+            <i class="fas fa-arrow-down"></i>
+          </button>
+          <button class="up-button">
+            <i class="fas fa-arrow-up"></i>
+          </button>
+        </div>
+      </div>
+    </section>
 
+    <!-- 창경궁 -->
+    <section class="palace-cdk">
+      <div class="container">
+        <div class="mySlides">
+          <!-- <div class="numbertext">1 / 6</div> -->
+          <img src="../video/palace/ck-buyong.jpg" style="width: 100%" />
+          <!-- src="../video/palace/ck-buyong.jpg" -->
+        </div>
+
+        <div class="mySlides">
+          <!-- <div class="numbertext">2 / 6</div> -->
+          <img src="../video/palace/ck-chundang.jpg" style="width: 100%" />
+          <!-- src="../video/palace/ck-chundang.jpg" -->
+        </div>
+
+        <div class="mySlides">
+          <!-- <div class="numbertext">3 / 6</div> -->
+          <img src="../video/palace/ck-daejo.jpg" style="width: 100%" />
+          <!-- src="../video/palace/ck-daejo.jpg" -->
+        </div>
+
+        <div class="mySlides">
+          <!-- <div class="numbertext">4 / 6</div> -->
+          <img src="../video/palace/ck-huijeong.jpg" style="width: 100%" />
+          <!-- src="../video/palace/ck-huijeong.jpg" -->
+        </div>
+
+        <div class="mySlides">
+          <!-- <div class="numbertext">5 / 6</div> -->
+          <img src="../video/palace/ck-injeong.jpeg" style="width: 100%" />
+          <!-- src="../video/palace/ck-injeong.jpeg" -->
+        </div>
+
+        <div class="mySlides">
+          <!-- <div class="numbertext">6 / 6</div> -->
+          <img
+            src="../video/palace/ck-okcheonmyungjeon.jpg"
+            style="width: 100%"
+          />
+          <!-- src="../video/palace/ck-okcheonmyungjeon.jpg" -->
+        </div>
+
+        <!-- Next and previous buttons -->
+        <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+        <a class="next" onclick="plusSlides(1)">&#10095;</a>
+
+        <!-- Image text -->
+        <div class="caption-container">
+          <p id="caption"></p>
+        </div>
+
+        <!-- Thumbnail images -->
+        <div class="row">
+          <div class="column">
+            <img
+              class="demo-cursor"
+              src="../video/palace/ck-buyong.jpg"
+              style="width: 100%"
+              onclick="currentSlide(1)"
+              alt="부용전"
+            />
+            <!-- src="../video/palace/ck-buyong.jpg" -->
+          </div>
+          <div class="column">
+            <img
+              class="demo-cursor"
+              src="../video/palace/ck-chundang.jpg"
+              style="width: 100%"
+              onclick="currentSlide(2)"
+              alt="춘당지"
+            />
+            <!-- src="../video/palace/ck-chundang.jpg" -->
+          </div>
+          <div class="column">
+            <img
+              class="demo-cursor"
+              src="../video/palace/ck-daejo.jpg"
+              style="width: 100%"
+              onclick="currentSlide(3)"
+              alt="대조전"
+            />
+            <!-- src="../video/palace/ck-daejo.jpg" -->
+          </div>
+          <div class="column">
+            <img
+              class="demo-cursor"
+              src="../video/palace/ck-huijeong.jpg"
+              style="width: 100%"
+              onclick="currentSlide(4)"
+              alt="희정루"
+            />
+            <!-- src="../video/palace/ck-huijeong.jpg" -->
+          </div>
+          <div class="column">
+            <img
+              class="demo-cursor"
+              src="../video/palace/ck-injeong.jpeg"
+              style="width: 100%"
+              onclick="currentSlide(5)"
+              alt="인정전"
+            />
+            <!-- src="../video/palace/ck-injeong.jpeg" -->
+          </div>
+          <div class="column">
+            <img
+              class="demo-cursor"
+              src="../video/palace/ck-okcheonmyungjeon.jpg"
+              style="width: 100%"
+              onclick="currentSlide(6)"
+              alt="옥천전 & 명정전"
+            />
+            <!-- src="../video/palace/ck-okcheonmyungjeon.jpg" -->
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- BUTTON -->
+    <button id="commonUpButton">
+      <i class="fa-solid fa-arrow-up"></i>
+    </button>
+  </body>
 </html>
