--- a/src/view.html
+++ b/src/view.html
@@ -20,11 +20,11 @@
   <body>
     <!-- HEADER -->
     <header>
-      <a href="/main.html" id="headerLogo"> NIGHT IN SEOUL</a>
+      <a href="/main.html" id="headerLogo"> NIGHT IN SEOUL.</a>
       <ul>
-        <li><a href="/src/drive.html">DRIVE COURSE</a></li>
         <li><a href="/src/event.html">EVENT</a></li>
         <li><a href="/src/palace.html">PALACE</a></li>
+        <li><a href="/src/drive.html">DRIVE</a></li>
         <li><a href="/src/view.html">VIEW</a></li>
       </ul>
     </header>
@@ -33,16 +33,10 @@
     <section class="scroller-section">
       <figure class="figureSection">
         <img src="/video/spot-image/남산타워화질good.jpg" alt="남산타워" />
-        <article>
-          <p>
-            Enjoy The Night Scape <br />
-            Of Seoul
-          </p>
-        </article>
+        <article></article>
       </figure>
       <div class="slider" id="slider3">
         <!-- 3 -->
-        <!-- <div class="loader"></div> -->
         <div class="imgDescript">
           <span class="emogeContainer">
             <i class="fa-solid fa-heart" style="color: #dd2a7b"></i>
@@ -72,64 +66,6 @@
             </span>
           </div>
         </div>
-        <div class="imgDescript2">
-          <span class="emogeContainer2">
-            <i class="fa-solid fa-heart" style="color: #dd2a7b"></i>
-            <i class="fa-regular fa-comment"></i>
-            <i class="fa-regular fa-paper-plane"></i>
-          </span>
-          <div class="imgPlace2">
-            <span class="profileHead2">
-              #Seoul Sky
-              <span class="profileCircleLine2">
-                <span class="profileCircle2"></span>
-              </span>
-              <span class="profileFollow2">
-                <b>8.4M</b>
-                <br />
-                POSTS
-                <br />
-                <button class="followBtn2">follow</button>
-              </span>
-              <iframe
-                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3164.804473904309!2d127.10011631524364!3d37.512529479808!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x357b458e7369b7bb%3A0x99685e4ee512b384!2z7ISc7Jq47Iqk7Lm07J20!5e0!3m2!1sko!2skr!4v1677821030918!5m2!1sko!2skr"
-                style="border: 0"
-                allowfullscreen=""
-                loading="lazy"
-                referrerpolicy="no-referrer-when-downgrade"
-              ></iframe>
-            </span>
-          </div>
-        </div>
-        <div class="imgDescript3">
-          <span class="emogeContainer3">
-            <i class="fa-solid fa-heart" style="color: #dd2a7b"></i>
-            <i class="fa-regular fa-comment"></i>
-            <i class="fa-regular fa-paper-plane"></i>
-          </span>
-          <div class="imgPlace3">
-            <span class="profileHead3">
-              #DDP
-              <span class="profileCircleLine3">
-                <span class="profileCircle3"></span>
-              </span>
-              <span class="profileFollow3">
-                <b>131M</b>
-                <br />
-                POSTS
-                <br />
-                <button class="followBtn3">follow</button>
-              </span>
-              <iframe
-                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3162.513447061601!2d127.00703491524526!3d37.566525579797926!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x357b456faf5814f3%3A0x5c22a91dab450bdc!2zRERQIOuPmeuMgOusuOuUlOyekOyduO2UjOudvOyekA!5e0!3m2!1sko!2skr!4v1677823406837!5m2!1sko!2skr"
-                style="border: 0"
-                allowfullscreen=""
-                loading="lazy"
-                referrerpolicy="no-referrer-when-downgrade"
-              ></iframe>
-            </span>
-          </div>
-        </div>
       </div>
       <div class="slider" id="slider2">
         <!-- 2 -->
@@ -151,11 +87,11 @@
               src="http://www.somesevit.co.kr/kr/company/gallery/view.do?seq=74&cpage=9"
               frameborder="0"
             ></iframe>
-            <!-- http://www.somesevit.co.kr/kr/company/gallery/view.do?seq=74&cpage=9 -->
           </figure>
         </div>
       </div>
       <div class="slider" id="slider1">
+        <!-- 1 -->
         <div class="slider-content" id="instaBg">
           <figure class="insta" id="instaPic1">
             <article class="insta__header">
