--- a/src/palace.html
+++ b/src/palace.html
@@ -18,7 +18,7 @@
 
 <body>
   <header>
-    <a href="/main.html"> NIGHT IN SEOUL</a>
+    <a href="/main.html"> NIGHT IN SEOUL.</a>
     <ul>
       <li>Drive</li>
       <li>Drive</li>
@@ -49,150 +49,160 @@
   </div>
   <!-- 경복궁 -->
   <section class="palace-kb">
-    <div class="container">
-      <div class="card">
-        <img src="../video/palace/kb-gwanghwa.jpg" />
-        <div class="card__head">광화문</div>
-      </div>
-      <div class="card">
-        <img src="../video/palace/kb-guenjung.jpg" />
-        <div class="card__head">근정전</div>
-      </div>
-      <div class="card">
-        <img src="../video/palace/kb-hyangwon.jpg" />
-        <div class="card__head">향원루</div>
-      </div>
-      <div class="card">
-        <img src="../video/palace/kb-chilgoong.jpeg" />
-        <div class="card__head">칠궁</div>
-      </div>
-      <div class="card">
-        <img src="../video/palace/kb-kyunghoi.jpg" />
-        <div class="card__head">경회루</div>
+    <div class="inner">
+      <div class="container">
+        <div class="card">
+          <img src="../video/palace/kb-gwanghwa.jpg" />
+          <div class="card__head">광화문</div>
+        </div>
+        <div class="card">
+          <img src="../video/palace/kb-guenjung.jpg" />
+          <div class="card__head">근정전</div>
+        </div>
+        <div class="card">
+          <img src="../video/palace/kb-hyangwon.jpg" />
+          <div class="card__head">향원루</div>
+        </div>
+        <div class="card">
+          <img src="../video/palace/kb-chilgoong.jpeg" />
+          <div class="card__head">칠궁</div>
+        </div>
+        <div class="card">
+          <img src="../video/palace/kb-kyunghoi.jpg" />
+          <div class="card__head">경회루</div>
+        </div>
       </div>
     </div>
-  </section>
 
+  </section>
 
   <!-- 덕수궁  -->
   <section class="palace-ds">
-    <div class="slider-container">
-      <div class="left-slide">
-        <div style="background-color: rgb(74, 202, 127)">
-          <h1>green Cherrish</h1>
-          <p>to evlove into care</p>
+    <div class="inner">
+      <div class="slider-container">
+        <div class="left-slide">
+          <div style="background-color: rgb(74, 202, 127)">
+            <h1>덕수궁 돌담길</h1>
+            <p>to evlove into care</p>
+          </div>
+          <div style="background-color: rgb(254, 160, 0)">
+            <h1>덕수궁 석조전</h1>
+            <p>Shinning the clouds</p>
+          </div>
+          <div style="background-color: rgb(231, 58, 95)">
+            <h1>덕수궁 함녕전</h1>
+            <p>in the wilderness</p>
+          </div>
+          <div style="background-color: rgb(176, 136, 240)">
+            <h1>덕수궁 정관헌</h1>
+            <p>in the sunset</p>
+          </div>
+          <div style="background-color: rgb(239, 93, 166)">
+            <h1>덕수궁 석조전</h1>
+            <p>to evlove into care</p>
+          </div>
+          <div style="background-color: rgb(254, 160, 0)">
+            <h1>덕수궁 돌담길</h1>
+            <p>Shinning the clouds</p>
+          </div>
         </div>
-        <div style="background-color: rgb(254, 160, 0)">
-          <h1>Yellow Luck</h1>
-          <p>Shinning the clouds</p>
+        <div class="right-slide">
+          <div style="background-image: url('../video/palace/ds-doldam.jpg');"></div>
+          <div style="background-image: url('../video/palace/ds-hamnyungjeon.jpg');"></div>
+          <div style="background-image: url('../video/palace/ds-junggwanhun.jpg');"></div>
+          <div style="background-image: url('../video/palace/ds-junghwajeon.jpg');"></div>
+          <div style="background-image: url('../video/palace/ds-seokjojeon.jpg');"></div>
+          <div style="background-image: url('../video/palace/ds-seokuhdang.jpg');"></div>
         </div>
-        <div style="background-color: rgb(231, 58, 95)">
-          <h1>Redness Lust</h1>
-          <p>in the wilderness</p>
+        <div class="action-buttons">
+          <button class="down-button">
+            <i class="fas fa-arrow-down"></i>
+          </button>
+          <button class="up-button">
+            <i class="fas fa-arrow-up"></i>
+          </button>
         </div>
-        <div style="background-color: rgb(176, 136, 240)">
-          <h1>Lavanda Love</h1>
-          <p>in the sunset</p>
-        </div>
-        <div style="background-color: rgb(239, 93, 166)">
-          <h1>Pink Cherrish</h1>
-          <p>to evlove into care</p>
-        </div>
-        <div style="background-color: rgb(254, 160, 0)">
-          <h1>orange dddd</h1>
-          <p>Shinning the clouds</p>
-        </div>
-      </div>
-      <div class="right-slide">
-        <div style="background-image: url('../video/palace/ds-junggwan.jpg');"></div>
-        <div style="background-image: url('../video/palace/ds-kyungwoonham.jpg');"></div>
-        <div style="background-image: url('../video/palace/ds-seokjo.jpg');"></div>
-        <div style="background-image: url('../video/palace/ds-seokuh.jpg');"></div>
-        <div style="background-image: url('../video/palace/ds-seokjo11.jpg');"></div>
-        <div style="background-image: url('../video/palace/ds');"></div>
-      </div>
-      <div class="action-buttons">
-        <button class="down-button">
-          <i class="fas fa-arrow-down"></i>
-        </button>
-        <button class="up-button">
-          <i class="fas fa-arrow-up"></i>
-        </button>
       </div>
     </div>
+
   </section>
 
 
   <!-- 창경궁 -->
   <section class="palace-cdk">
-    <div class="container">
+    <div class="inner">
+      <div class="container">
 
-      <!-- Full-width images with number text -->
-      <div class="mySlides">
-        <div class="numbertext">1 / 6</div>
-        <img src="./image/1.jpg" style="width:100%; height:300px">
-      </div>
-
-      <div class="mySlides">
-        <div class="numbertext">2 / 6</div>
-        <img src="./image/2.jpg" style="width:100%; height:300px">
-      </div>
-
-      <div class="mySlides">
-        <div class="numbertext">3 / 6</div>
-        <img src="./image/3.jpg" style="width:100%; height:300px">
-      </div>
-
-      <div class="mySlides">
-        <div class="numbertext">4 / 6</div>
-        <img src="./image/4.jpg" style="width:100%; height:300px">
-      </div>
-
-      <div class="mySlides">
-        <div class="numbertext">5 / 6</div>
-        <img src="./image/5.jpg" style="width:100%; height:300px">
-      </div>
-
-      <div class="mySlides">
-        <div class="numbertext">6 / 6</div>
-        <img src="./image/1.jpg" style="width:100%; height:300px">
-      </div>
-
-      <!-- Next and previous buttons -->
-      <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
-      <a class="next" onclick="plusSlides(1)">&#10095;</a>
-
-      <!-- Image text -->
-      <div class="caption-container">
-        <p id="caption"></p>
-      </div>
-
-      <!-- Thumbnail images -->
-      <div class="row">
-        <div class="column">
-          <img class="demo-cursor" src="/image/1.jpg" style="width:100%" onclick="currentSlide(1)" alt="The Woods">
+        <!-- Full-width images with number text -->
+        <div class="mySlides">
+          <div class="numbertext"></div>
+          <img src="../video/palace/ck-myungjeon.jpg" style="width:100%; height:500px">
         </div>
-        <div class="column">
-          <img class="demo-cursor" src="/image/2.jpg" style="width:100%" onclick="currentSlide(2)" alt="Cinque Terre">
+
+        <div class="mySlides">
+          <div class="numbertext"></div>
+          <img src="../video/palace/ck-myunokcheon.jpg" style="width:100%; height:500px">
         </div>
-        <div class="column">
-          <img class="demo-cursor" src="/image/3.jpg" style="width:100%" onclick="currentSlide(3)"
-            alt="Mountains and fjords">
+
+        <div class="mySlides">
+          <div class="numbertext"></div>
+          <img src="../video/palace/ck-buyongji2.jpg" style="width:100%; height:500px">
         </div>
-        <div class="column">
-          <img class="demo-cursor" src="/image/4.jpg" style="width:100%" onclick="currentSlide(4)"
-            alt="Northern Lights">
+
+        <div class="mySlides">
+          <div class="numbertext"></div>
+          <img src="../video/palace/ck-daeonshil.jpg" style="width:100%; height:500px">
         </div>
-        <div class="column">
-          <img class="demo-cursor" src="/image/5.jpg" style="width:100%" onclick="currentSlide(5)"
-            alt="Nature and sunrise">
+
+        <div class="mySlides">
+          <div class="numbertext"></div>
+          <img src="../video/palace/ck-huijungdang.jpg" style="width:100%; height:500px">
         </div>
-        <div class="column">
-          <img class="demo-cursor" src="/image/1.jpg" style="width:100%" onclick="currentSlide(6)"
-            alt="Snowy Mountains">
+
+        <div class="mySlides">
+          <div class="numbertext"></div>
+          <img src="../video/palace/ck-sangryangjeon.jpg" style="width:100%; height:500px">
+        </div>
+
+        <!-- Next and previous buttons -->
+        <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+        <a class="next" onclick="plusSlides(1)">&#10095;</a>
+
+        <!-- Image text -->
+        <div class="caption-container">
+          <p id="caption"></p>
+        </div>
+
+        <!-- Thumbnail images -->
+        <div class="row">
+          <div class="column">
+            <img class="demo-cursor" src="../video/palace/ck-myungjeon.jpg" style="width:100%" onclick="currentSlide(1)"
+              alt="명 정 전">
+          </div>
+          <div class="column">
+            <img class="demo-cursor" src="../video/palace/ck-myunokcheon.jpg" style="width:100%"
+              onclick="currentSlide(2)" alt="옥 천 교">
+          </div>
+          <div class="column">
+            <img class="demo-cursor" src="../video/palace/ck-buyongji2.jpg" style="width:100%" onclick="currentSlide(3)"
+              alt="부 용 지">
+          </div>
+          <div class="column">
+            <img class="demo-cursor" src="../video/palace/ck-daeonshil.jpg" style="width:100%" onclick="currentSlide(4)"
+              alt="대 온 실">
+          </div>
+          <div class="column">
+            <img class="demo-cursor" src="../video/palace/ck-huijungdang.jpg" style="width:100%"
+              onclick="currentSlide(5)" alt="희 정 당">
+          </div>
+          <div class="column">
+            <img class="demo-cursor" src="../video/palace/ck-sangryangjeon.jpg" style="width:100%"
+              onclick="currentSlide(6)" alt="상 량 전">
+          </div>
         </div>
       </div>
     </div>
+
   </section>
 
   <!-- BUTTON -->
