--- a/src/palace.html
+++ b/src/palace.html
@@ -95,27 +95,27 @@
     <div class="inner">
       <div class="slider-container">
         <div class="left-slide">
-          <div style="background-color: rgb(74, 202, 127)">
+          <div style="background-color: rgb(255, 123, 207)">
             <h1>덕수궁 돌담길</h1>
             <p>to evlove into care</p>
           </div>
-          <div style="background-color: rgb(254, 160, 0)">
+          <div style="background-color: rgb(232, 169, 209)">
             <h1>덕수궁 석조전</h1>
             <p>Shinning the clouds</p>
           </div>
-          <div style="background-color: rgb(231, 58, 95)">
+          <div style="background-color: rgb(232, 169, 209)">
             <h1>덕수궁 함녕전</h1>
             <p>in the wilderness</p>
           </div>
-          <div style="background-color: rgb(176, 136, 240)">
+          <div style="background-color: rgb(232, 169, 209)">
             <h1>덕수궁 정관헌</h1>
             <p>in the sunset</p>
           </div>
-          <div style="background-color: rgb(239, 93, 166)">
+          <div style="background-color: rgb(232, 169, 209)">
             <h1>덕수궁 석조전</h1>
             <p>to evlove into care</p>
           </div>
-          <div style="background-color: rgb(254, 160, 0)">
+          <div style="background-color: rgb(232, 169, 209)">
             <h1>덕수궁 돌담길</h1>
             <p>Shinning the clouds</p>
           </div>
@@ -145,36 +145,23 @@
   <section class="palace-cdk">
     <div class="inner">
       <div class="container">
-
-        <!-- Full-width images with number text -->
         <div class="mySlides">
-          <div class="numbertext"></div>
-          <img src="../video/palace/ck-myungjeon.jpg" style="width:100%; height:500px">
+          <img src="../video/palace/ck-myungjeon.jpg" style="width: 100%" />
         </div>
-
         <div class="mySlides">
-          <div class="numbertext"></div>
-          <img src="../video/palace/ck-myunokcheon.jpg" style="width:100%; height:500px">
+          <img src="../video/palace/ck-myunokcheon.jpg" style="width: 100%" />
         </div>
-
         <div class="mySlides">
-          <div class="numbertext"></div>
-          <img src="../video/palace/ck-buyongji2.jpg" style="width:100%; height:500px">
+          <img src="../video/palace/ck-huijungdang.jpg" style="width: 100%" />
         </div>
-
         <div class="mySlides">
-          <div class="numbertext"></div>
-          <img src="../video/palace/ck-daeonshil.jpg" style="width:100%; height:500px">
+          <img src="../video/palace/ck-daeonshil.jpg" style="width: 100%" />
         </div>
-
         <div class="mySlides">
-          <div class="numbertext"></div>
-          <img src="../video/palace/ck-huijungdang.jpg" style="width:100%; height:500px">
+          <img src="../video/palace/ck-buyongji2.jpg" style="width: 100%" />
         </div>
-
         <div class="mySlides">
-          <div class="numbertext"></div>
-          <img src="../video/palace/ck-sangryangjeon.jpg" style="width:100%; height:500px">
+          <img src="../video/palace/ck-sangryangjeon.jpg" style="width: 100%" />
         </div>
 
         <!-- Next and previous buttons -->
@@ -189,28 +176,28 @@
         <!-- Thumbnail images -->
         <div class="row">
           <div class="column">
-            <img class="demo-cursor" src="../video/palace/ck-myungjeon.jpg" style="width:100%" onclick="currentSlide(1)"
-              alt="명 정 전">
+            <img class="demo-cursor" src="../video/palace/ck-myungjeon.jpg" style="width: 100%"
+              onclick="currentSlide(1)" alt="명 정 전" />
           </div>
           <div class="column">
-            <img class="demo-cursor" src="../video/palace/ck-myunokcheon.jpg" style="width:100%"
-              onclick="currentSlide(2)" alt="옥 천 교">
+            <img class="demo-cursor" src="../video/palace/ck-myunokcheon.jpg" style="width: 100%"
+              onclick="currentSlide(2)" alt="옥 천 교" />
           </div>
           <div class="column">
-            <img class="demo-cursor" src="../video/palace/ck-buyongji2.jpg" style="width:100%" onclick="currentSlide(3)"
-              alt="부 용 지">
+            <img class="demo-cursor" src="../video/palace/ck-huijungdang.jpg" style=" width: 100%"
+              onclick="currentSlide(3)" alt="희 정 당 " />
           </div>
           <div class="column">
-            <img class="demo-cursor" src="../video/palace/ck-daeonshil.jpg" style="width:100%" onclick="currentSlide(4)"
-              alt="대 온 실">
+            <img class="demo-cursor" src="../video/palace/ck-daeonshil.jpg" style="width: 100%"
+              onclick="currentSlide(4)" alt="대 온 실 " />
           </div>
           <div class="column">
-            <img class="demo-cursor" src="../video/palace/ck-huijungdang.jpg" style="width:100%"
-              onclick="currentSlide(5)" alt="희 정 당">
+            <img class="demo-cursor" src="../video/palace/ck-buyongji2.jpg" style="width: 100%"
+              onclick="currentSlide(5)" alt="부 용 지" />
           </div>
           <div class="column">
-            <img class="demo-cursor" src="../video/palace/ck-sangryangjeon.jpg" style="width:100%"
-              onclick="currentSlide(6)" alt="상 량 전">
+            <img class="demo-cursor" src="../video/palace/ck-sangryangjeon.jpg" style="width: 100%"
+              onclick="currentSlide(6)" alt="상 량 전" />
           </div>
         </div>
       </div>
@@ -221,96 +208,6 @@
   <button id="commonUpButton">
     <i class="fa-solid fa-arrow-up"></i>
   </button>
-</body>
-
-<!-- 창경궁 -->
-<section class="palace-cdk">
-  <div class="container">
-    <div class="mySlides">
-      <!-- <div class="numbertext">1 / 6</div> -->
-      <img src="../video/palace/ck-buyong.jpg" style="width: 100%" />
-      <!-- src="../video/palace/ck-buyong.jpg" -->
-    </div>
-
-    <div class="mySlides">
-      <!-- <div class="numbertext">2 / 6</div> -->
-      <img src="../video/palace/ck-chundang.jpg" style="width: 100%" />
-      <!-- src="../video/palace/ck-chundang.jpg" -->
-    </div>
-
-    <div class="mySlides">
-      <!-- <div class="numbertext">3 / 6</div> -->
-      <img src="../video/palace/ck-daejo.jpg" style="width: 100%" />
-      <!-- src="../video/palace/ck-daejo.jpg" -->
-    </div>
-
-    <div class="mySlides">
-      <!-- <div class="numbertext">4 / 6</div> -->
-      <img src="../video/palace/ck-huijeong.jpg" style="width: 100%" />
-      <!-- src="../video/palace/ck-huijeong.jpg" -->
-    </div>
-
-    <div class="mySlides">
-      <!-- <div class="numbertext">5 / 6</div> -->
-      <img src="../video/palace/ck-injeong.jpeg" style="width: 100%" />
-      <!-- src="../video/palace/ck-injeong.jpeg" -->
-    </div>
-
-    <div class="mySlides">
-      <!-- <div class="numbertext">6 / 6</div> -->
-      <img src="../video/palace/ck-okcheonmyungjeon.jpg" style="width: 100%" />
-      <!-- src="../video/palace/ck-okcheonmyungjeon.jpg" -->
-    </div>
-
-    <!-- Next and previous buttons -->
-    <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
-    <a class="next" onclick="plusSlides(1)">&#10095;</a>
-
-    <!-- Image text -->
-    <div class="caption-container">
-      <p id="caption"></p>
-    </div>
-
-    <!-- Thumbnail images -->
-    <div class="row">
-      <div class="column">
-        <img class="demo-cursor" src="../video/palace/ck-buyong.jpg" style="width: 100%" onclick="currentSlide(1)"
-          alt="부용전" />
-        <!-- src="../video/palace/ck-buyong.jpg" -->
-      </div>
-      <div class="column">
-        <img class="demo-cursor" src="../video/palace/ck-chundang.jpg" style="width: 100%" onclick="currentSlide(2)"
-          alt="춘당지" />
-        <!-- src="../video/palace/ck-chundang.jpg" -->
-      </div>
-      <div class="column">
-        <img class="demo-cursor" src="../video/palace/ck-daejo.jpg" style="width: 100%" onclick="currentSlide(3)"
-          alt="대조전" />
-        <!-- src="../video/palace/ck-daejo.jpg" -->
-      </div>
-      <div class="column">
-        <img class="demo-cursor" src="../video/palace/ck-huijeong.jpg" style="width: 100%" onclick="currentSlide(4)"
-          alt="희정루" />
-        <!-- src="../video/palace/ck-huijeong.jpg" -->
-      </div>
-      <div class="column">
-        <img class="demo-cursor" src="../video/palace/ck-injeong.jpeg" style="width: 100%" onclick="currentSlide(5)"
-          alt="인정전" />
-        <!-- src="../video/palace/ck-injeong.jpeg" -->
-      </div>
-      <div class="column">
-        <img class="demo-cursor" src="../video/palace/ck-okcheonmyungjeon.jpg" style="width: 100%"
-          onclick="currentSlide(6)" alt="옥천전 & 명정전" />
-        <!-- src="../video/palace/ck-okcheonmyungjeon.jpg" -->
-      </div>
-    </div>
-  </div>
-</section>
-
-<!-- BUTTON -->
-<button id="commonUpButton">
-  <i class="fa-solid fa-arrow-up"></i>
-</button>
 </body>
 
 </html>
